--- a/template/src/小程序开发前准备工作.md
+++ b/template/src/小程序开发前准备工作.md
@@ -4,7 +4,7 @@
 * 2.小程序信息
 * 3.小程序开发与管理
 * 4.设置-基本信息
-* 5.微信认证（微信手机号快捷登陆 需要小完成认证）
+* 5.微信认证（微信手机号快捷登陆 需要完成认证）
 * 6.上海无线登陆插件接入 https://cf.jd.com/pages/viewpage.action?pageId=102163665
 * 7.获取小程序appid 和 appsecret
 * 8.开发管理-开发设置 
